# VulkanCourse

./: .gitignore  pedestal_vertices.inc
beadando1/: CMakeLists.txt  README.md
beadando1/05_moving/: grid.cpp  grid.frag
beadando1/beadando/: CMakeLists.txt  beadando.cpp  crystal.cpp  crystal.frag  crystal.h  crystal.vert  crystal_vertices.inc  diamond.cpp  diamond.h  lightning_shadowmap.frag  lightning_shadowmap.vert  lightning_simple.frag  lightning_simple.vert  pedestal.cpp  pedestal.h  pedestal_vertices.inc  shadow_map.vert  star.cpp  star.frag  star.h  star.vert  star_vertices.inc  triangle_in.frag  triangle_in.vert  vertex.h  vertex_tools.h
beadando1/beadando/gridyoinking/: 10_postprocess.cpp  grid.cpp  grid.vert
beadando1/lib/: context.cpp
lessons/: CMakeLists.txt  imgui.ini
lessons/05_moving/: 05_moving.cpp  camera.h  grid.cpp  grid.frag  grid.vert
lessons/08_light/: 08_light.cpp  CMakeLists.txt  grid.cpp  simple_cube.cpp
lessons/09_shadow/: 04_cube_vertices.inc  09_shadow.cpp  CMakeLists.txt  README.md  grid.h  lightning_pass.h  lightning_shadowmap.frag  lightning_shadowmap.vert  lightning_simple.vert  shadow_map.h  shadow_map.vert  triangle_in.vert
lessons/10_postprocess/: CMakeLists.txt  grid.cpp  grid.frag  grid.vert  lightning_pass.cpp  lightning_shadowmap.frag  lightning_shadowmap.vert  lightning_simple.frag  post_process.cpp  post_process.h  shadow_map.cpp  simple_cube.cpp  simple_cube.h
lessons/lib/: camera.h  context.h  wrappers.cpp  wrappers.h
vkcourse/05_moving/: grid.h  grid.vert
vkcourse/beadando/: CMakeLists.txt  beadando.cpp  pedestal.cpp  pedestal.h  triangle_in.vert
vkcourse/lib/: texture.cpp  texture.h
